<resources>
    <string name="app_name">Ey+</string>
    <string name="app_description">Con Ey+</string>
    <string name="app_description_1">Organiza Fiestas, Eventos</string>
    <string name="app_description_2">y Algo Más!</string>


    <string name="app_correo">Correo</string>
    <string name="app_correo_hint">alguien@example.com</string>
    <string name="app_password">Contraseña</string>
    <string name="app_password_hint">******</string>
    <string name="app_login">Iniciar Sesion</string>
    <string name="app_singin">Registrarse</string>
    <string name="app_recupera">Recuperar</string>
    <string name="app_recutext">¿Olvidaste tu contraseña?</string>
    <string name="app_registrate">¿Aún no eres parte de Ey+?</string>

    <string name="title_registro">Registro</string>
    <string name="reg_nombre">Nombre</string>
    <string name="reg_nombre_hint">Juan</string>
    <string name="reg_apellido">Apellidos</string>
    <string name="reg_apellido_hint">Peréz</string>
    <string name="reg_fechan">Fecha de Nacimiento</string>
    <string name="reg_fechan_hint">ej. 01/01/1999</string>
    <string name="reg_telefono">Telefono</string>
    <string name="reg_telefono_hint">5512435687</string>
    <string name="reg_correo">Correo</string>
    <string name="reg_correo_hint">alguien@example.com</string>
    <string name="reg_password">Contraseña</string>
    <string name="reg_password_hint">Al menos 6 caracteres</string>
    <string name="reg_terminos">Aceptar terminos y condiciones</string>
    <string name="reg_next">Siguiente</string>
    <string name="reg_back">Cancelar</string>

    <string name="title_paquetes">Elige un Paquete</string>
    <string name="pqt_next">Siguiente</string>
    <string name="pqt_back">Cancelar</string>

    <string name="title_revento">Evento</string>
    <string name="rev_next">Siguiente</string>
    <string name="rev_back">Atras</string>
    <string name="rev_nombre">Nombre de tu Evento</string>
    <string name="rev_nombre_hint">Boda/Cumpleaños/etc</string>
    <string name="rev_ubica">Ubicación de tu Evento</string>
    <string name="rev_ubica_hint">Calle: No:</string>
    <string name="rev_fecha">Fecha de tu Evento</string>
    <string name="rev_fecha_hint">min. 15 dias a partir de hoy</string>
    <string name="rev_hora">Hora de tu Evento</string>
    <string name="rev_hora_hint">17:00</string>

    <string name="title_pay">Acreditación de PayPal</string>

    <string name="title_home">Mis Eventos</string>
    <string name="hom_logout">Cerrar Sesión</string>
    <string name="hom_nevento">Agregar Evento</string>
    <string name="title_activity_uimain">UimainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Mi Evento</string>
    <string name="menu_gallery">Invitados</string>
    <string name="menu_slideshow">Mesas</string>
    <string name="menu_proovedor">Proveedores</string>
    <string name="menu_cadenero">Cadenero</string>
    <string name="menu_perfil">Mi Perfil</string>

    <string name="fh_edit">Editar Evento</string>
    <string name="fh_evts">Mis Eventos</string>
    <string name="fh_coanf">Coanfitrion</string>

    <string name="title_inv">Invitados</string>
    <string name="correo_inv">Correo</string>
    <string name="familia_inv">Nombre / Familia</string>
    <string name="pases_inv">Pases</string>
    <string name="mesa_inv">No.Mesa</string>
    <string name="nube_inv">Acceso Nube:</string>
    <string name="add_inv">Agregar </string>
    <string name="list_inv">Listar </string>
    <string name="edit_inv">Editar Invitado </string>


    <string name="title_ede">Editar Evento</string>
    <string name="save_ede">Guardar</string>
    <string name="delete_ede">Eliminar Evento</string>

    <string name="tittle_recu">Recuperar Contraseña</string>
    <string name="correo_recu">Ingresa el correo de tu cuenta Ey+</string>
    <string name="bt_recu">Recuperar</string>

    <string name="tittle_Mesas">Mesas de Invitados</string>
    <string name="num_mesas">Mesa número: </string>

    <string name="correo_proov">Correo Proveedor: </string>
    <string name="servicio_proov">Servicio: </string>
    <string name="nombre_proov">Nombre Proveedor: </string>
    <string name="personas_proov">Personal: </string>
    <string name="telefono_proov">Telefono: </string>
    <string name="edit_proov">Editar Proveedor</string>
    <string name="save_proov">Guardar</string>
    <string name="cancel_proov">Cancelar</string>

    <string name="tittle_cadenero">¡Escanea una Invitación!</string>
    <string name="icon_cadenero">Escanear</string>

    <string name="tittle_perfil">¡Escanea una Invitación!</string>
    <string name="out_perfil">Cerrar Sesión</string>
    <string name="correo_perfil">Editar Correo</string>
    <string name="contra_perfil">Editar Información</string>

    <string name="edit_perfil">Editar Información</string>

    <string name="inv_can">Invitados</string>
    <string name="prov_can">Proveedores</string>
    <string name="scan_can">Cadenero</string>

    <string name="cod_lgca">Codigo</string>


</resources>