<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".ui.perfil.EditarPerfil">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_perfil"
        android:textSize="25dp"
        android:textColor="@color/purple_700"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_nombre"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_nom_edper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/reg_nombre_hint"
        android:layout_marginHorizontal="10dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_apellido"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_apellido_edper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/reg_apellido_hint"
        android:layout_marginHorizontal="10dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_fechan"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_fechan_edper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/reg_fechan_hint"
        android:layout_marginHorizontal="10dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_telefono"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_tel_edper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/reg_telefono_hint"
        android:layout_marginHorizontal="10dp"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/bt_save_edper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/save_proov"
        android:layout_gravity="center"
        android:textSize="18dp"
        app:icon="@drawable/ic_save"
        android:layout_marginHorizontal="5dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bts_cancel_edper"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:text="@string/cancel_proov"
        app:iconTint="@color/purple_500"
        android:layout_gravity="center"
        app:icon="@drawable/ic_cancel"/>
</LinearLayout>