<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="40dp"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_registro"
            android:textSize="25dp"
            android:textColor="@color/purple_700"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_nombre"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edit_nom_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/reg_nombre_hint"
            android:layout_marginHorizontal="10dp"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_apellido"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edit_apellido_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/reg_apellido_hint"
            android:layout_marginHorizontal="10dp"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_fechan"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edit_fechan_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/reg_fechan_hint"
            android:layout_marginHorizontal="10dp"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_telefono"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edit_tel_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/reg_telefono_hint"
            android:layout_marginHorizontal="10dp"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_correo"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edit_correo_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/reg_correo_hint"
            android:layout_marginHorizontal="10dp"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_password"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:id="@+id/edit_password_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/reg_password_hint"
            android:layout_marginHorizontal="10dp"
            android:textSize="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/chb_tyc_r"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tv_tyc_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_terminos"
                android:textSize="20dp"
                android:textColor="@color/purple_700"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/bt_next_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/reg_next"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/bt_back_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/reg_back"
            android:textSize="20dp"/>
    </LinearLayout>
</ScrollView>