<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    tools:context=".EventoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_revento"
        android:textSize="25dp"
        android:textColor="@color/purple_700"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rev_nombre"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_nom_rev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/rev_nombre_hint"
        android:layout_marginHorizontal="8dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rev_ubica"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_ubica_rev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/rev_ubica_hint"
        android:layout_marginHorizontal="8dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rev_fecha"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_fecha_rev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/rev_fecha_hint"
        android:layout_marginHorizontal="8dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rev_hora"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_hora_rev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:hint="@string/rev_hora_hint"
        android:layout_marginHorizontal="8dp"
        android:textSize="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/chb_tyc_rev"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_tyc_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_terminos"
            android:textSize="20dp"
            android:textColor="@color/purple_700"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/bt_next_rev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/rev_next"
        android:textSize="20dp"
        app:icon="@drawable/ic_next"/>

</LinearLayout>