<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="40dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:text="@string/app_name"
        android:textColor="@color/purple_700"
        android:textSize="100dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_correo"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginHorizontal="20dp"/>
    <EditText
        android:id="@+id/edit_correo_lg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_correo_hint"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="20dp"
        android:textSize="18dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_password"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginHorizontal="20dp"/>
    <EditText
        android:id="@+id/edit_password_lg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_password_hint"
        android:inputType="textPassword"
        android:layout_marginHorizontal="20dp"
        android:textSize="18dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/bt_login_lg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/app_login"
        android:textSize="20dp" />
    <Button
        android:id="@+id/bt_back_lg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rev_back"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:text="@string/app_recutext"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bts_recuperar_lg"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:textSize="15dp"
        android:text="@string/app_recupera"
        app:iconTint="@color/purple_500"
        android:layout_gravity="center"/>
</LinearLayout>