<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditeventoActivity"
    android:orientation="vertical"
    android:layout_margin="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_ede"
        android:textSize="25dp"
        android:textColor="@color/purple_700"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rev_nombre"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_nom_ede"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/rev_nombre_hint"
        android:layout_marginHorizontal="8dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rev_ubica"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_ubica_ede"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/rev_ubica_hint"
        android:layout_marginHorizontal="8dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rev_fecha"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_fecha_ede"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/rev_fecha_hint"
        android:layout_marginHorizontal="8dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rev_hora"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:id="@+id/edit_hora_ede"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:hint="@string/rev_hora_hint"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="40dp"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/bt_save_ede"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_ede"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:icon="@drawable/ic_save"/>
    <Button
        android:id="@+id/bt_cancel_ede"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancelar"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        app:icon="@drawable/ic_cancel"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bts_del_ede"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:textSize="15dp"
        android:text="@string/delete_ede"
        app:iconTint="@color/purple_500"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:icon="@drawable/ic_delete"/>

</LinearLayout>