<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="40dp"
    tools:context=".PayActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_pay"
        android:textSize="25dp"
        android:textColor="@color/purple_700"
        android:gravity="center"/>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_payment"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_correo"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/edit_correo_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/app_correo_hint"
        android:inputType="textEmailAddress"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_password"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/edit_password_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/app_password_hint"
        android:inputType="textPassword"
        android:textSize="20dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/bt_next_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/rev_next"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/bt_back_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/rev_back"
        android:textSize="20dp"/>
</LinearLayout>