<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.isproject.ey.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.isproject.ey.ui.invitado.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.isproject.ey.ui.mesas.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_proveedor"
        android:name="com.isproject.ey.ui.proveedor.ProovedorFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_proovedor" />

    <fragment
        android:id="@+id/nav_cadenero"
        android:name="com.isproject.ey.ui.cadenero.CadeneroFragment"
        android:label="@string/menu_cadenero"
        tools:layout="@layout/fragment_cadenero" />
</navigation>