<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        android:textSize="25dp"
        android:textColor="@color/purple_700"
        android:gravity="center"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <ListView
                android:id="@+id/lv_eventos_h"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </ScrollView>
    </LinearLayout>
    <Button
        android:id="@+id/bt_nevento_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/hom_nevento"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/bt_logout_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/hom_logout"
        android:textSize="20dp"/>

</LinearLayout>